--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "linktory",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "bot.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
     "pg": "^8.16.3",
     "telegraf": "^4.16.3"
