--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "linktory",
   "version": "1.0.0",
-  "main": "bot.js",
+  "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node index.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "pg": "^8.16.3",
     "telegraf": "^4.16.3"
   }
