--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "type": "module",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
-    "express": "^4.18.2",
+    "cookie-parser": "^1.4.7",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "telegraf": "^4.16.3"
   }
