--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "telegraf": "^4.16.3",
+    "tonweb": "^0.0.66",
     "express": "^4.19.2",
     "dotenv": "^16.4.5",
     "path": "^0.12.7"
@@ -25,3 +26,4 @@
     "node": ">=18.x"
   }
 }
+
